c.ebnf
<program> ::= <function>
<function> ::= int <identifier> "(" "void" ")" <block>
<block-item> ::= <statement> | <declaration>
<declaration> ::= "int" <identifier> ["=" <expr>]  ";"
<statement> ::= return <expr> ";" | <exp> ";" | if "(" <expr> ")" <statement> ["else" <statement>] | ";" | <block>
<factor> 
    ::= <identifier> 
      | <literal> 
      | <unary-op> <factor> 
      | "(" <expr> ")"
<expr> ::= <factor> | <expr> <binary-op> <expr> | <expr> "?" <expr> ":" <expr>
<identifier> ::= ? an identifier ?
<literal> ::= ? a literal value ?
<unary-op> ::= "~" | "-" | "!"
<binary-op> 
    ::= "+" 
      | "-" 
      | "*" 
      | "/"
      | "%" 
      | "<<" 
      | ">>" 
      | "&" 
      | "|" 
      | "^" 
      | "&&" 
      | "||" 
      | "==" 
      | "!=" 
      | ">" 
      | "<" 
      | "<=" 
      | ">="
<block> ::= "{" { <block-item> } "}"
